# dsflow-ising

./: .gitignore  CLAUDE.md  TODO_PR_SUMMARY.md  pyproject.toml
doc/: discrete_flows_statmech.tex
dsflow_ising/: config.py  diagnostics.py  flow.py  made.py  multiscale.py  multiscale_flow.py  train.py
scripts/: automate_benchmark.py  plot_training.py  run_training.py  visualize_multiscale.py
tests/: test_flow.py  test_flow_extremes.py  test_multiscale_flow.py
